apps/dev-ngsa-asb-eastus/overlays/bootstrap-overlays.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kured                           # Must match `--ds-name`
  namespace: cluster-baseline-settings  # Must match `--ds-namespace`
spec:
  template:    
    spec:      
      containers:
        - name: kured
          image: docker.io/weaveworks/kured:1.6.1
