apps/dev-ngsa-asb-eastus/overlays/istio-overlays.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts: 
      - "ngsa/ngsa-memory-eastus-dev.cse.ms"
      - "ngsa/ngsa-cosmos-eastus-dev.cse.ms"
      - "ngsa/ngsa-java-eastus-dev.cse.ms"
      - "monitoring/grafana-eastus-dev.cse.ms"
      - "loderunner/loderunner-eastus-dev.cse.ms"
